ruby/sambamba.h

/* --------------------- Main types used throughout ------------------------- */

/* In D, the array layout is as follows */
typedef struct { char* buf; size_t len; } dstring_s;
typedef struct { int8_t* buf; size_t len; } aint8_s;
typedef struct { uint8_t* buf; size_t len; } auint8_s;
typedef struct { int16_t* buf; size_t len; } aint16_s;
typedef struct { uint16_t* buf; size_t len; } auint16_s;
typedef struct { int32_t* buf; size_t len; } aint32_s;
typedef struct { uint32_t* buf; size_t len; } auint32_s;
typedef struct { float* buf; size_t len; } afloat_s;
typedef void* bam_reader_t; /* BAM reader object */
typedef struct {
    size_t len;          /* length of raw data */
    uint8_t* buf;  /* raw data */
    bam_reader_t reader; /* parent reader */
} bam_read_s;
                   
typedef bam_read_s* bam_read_t; /* single read */
typedef struct {
    uint8_t* buf;
    size_t len;
} buffer_s;
typedef struct { uint32_t* buf; size_t len; } cigar_s;
void bam_read_set_is_first_of_pair(bam_read_t, bool);
void bam_read_set_is_second_of_pair(bam_read_t, bool);
void bam_read_set_is_secondary_alignment(bam_read_t, bool);
void bam_read_set_failed_quality_control(bam_read_t, bool);
void bam_read_set_is_duplicate(bam_read_t, bool);
                        /* -------- Accessing read tags -------- */

enum tag_type_id {
    TYPE_UINT8 = 32,
    TYPE_UINT16 = 64,
    TYPE_UINT32 = 128,
    TYPE_INT8 = 48,
    TYPE_INT16 = 80,
    TYPE_INT32 = 144,
    TYPE_FLOAT = 136,
    TYPE_CHAR = 36,
    TYPE_UINT8_ARRAY = 33,
    TYPE_UINT16_ARRAY = 65,
    TYPE_UINT32_ARRAY = 129,
    TYPE_INT8_ARRAY = 49,
    TYPE_INT16_ARRAY = 81,
    TYPE_INT32_ARRAY = 145,
    TYPE_FLOAT_ARRAY = 137,
    TYPE_STRING = 37,
    TYPE_HEX_STRING = 45,       /* should be treated same as string */
    TYPE_NULL = 2               /* indicates absence of tag in a read */
};
/* In order to get the tag value, first get the type of the tag.
   Then call the corresponding function.
   (tag_name length must be 2 - check that in the target language) */
uint8_t bam_read_tag_type_id(const bam_read_t, const char* tag_name);
char bam_read_char_tag(const bam_read_t, const char*);
int8_t bam_read_int8_tag(const bam_read_t, const char*);
uint8_t bam_read_uint8_tag(const bam_read_t, const char*);
int16_t bam_read_int16_tag(const bam_read_t, const char*);
uint16_t bam_read_uint16_tag(const bam_read_t, const char*);
int32_t bam_read_int32_tag(const bam_read_t, const char*);
uint32_t bam_read_uint32_tag(const bam_read_t, const char*);
float bam_read_float_tag(const bam_read_t, const char*);
aint8_s bam_read_int8_array_tag(const bam_read_t, const char*);
auint8_s bam_read_uint8_array_tag(const bam_read_t, const char*);
aint16_s bam_read_int16_array_tag(const bam_read_t, const char*);
auint16_s bam_read_uint16_array_tag(const bam_read_t, const char*);
aint32_s bam_read_int32_array_tag(const bam_read_t, const char*);
auint32_s bam_read_uint32_array_tag(const bam_read_t, const char*);
afloat_s bam_read_float_array_tag(const bam_read_t, const char*);
dstring_s bam_read_string_tag(const bam_read_t, const char*);
/* The following functions return a structure with updated 'buf' and 'len'.
   If the pointer is different from the initial 'buf' field of the read,
   the data from the buffer must be copied into newly allocated memory. 
   Otherwise only the length must be updated. */
buffer_s* df_bam_read_set_char_tag(bam_read_t, const char*, char);
buffer_s* df_bam_read_set_int8_tag(bam_read_t, const char*, int8_t);
buffer_s* df_bam_read_set_uint8_tag(bam_read_t, const char*, uint8_t);
buffer_s* df_bam_read_set_int16_tag(bam_read_t, const char*, int16_t);
buffer_s* df_bam_read_set_uint16_tag(bam_read_t, const char*, uint16_t);
buffer_s* df_bam_read_set_int32_tag(bam_read_t, const char*, int32_t);
buffer_s* df_bam_read_set_uint32_tag(bam_read_t, const char*, uint32_t);
buffer_s* df_bam_read_set_float_tag(bam_read_t, const char*, float);
buffer_s* df_bam_read_set_string_tag(bam_read_t, const char*, const char* strz);
/* ----------------------------- Read in a pileup --------------------------- */

/* notice that pileup_read_t can be passed as an argument
   to all functions that expect bam_read_t */
typedef struct {
    bam_read_s read;
    int32_t additional_info[5];
} pileup_read_s;
typedef pileup_read_s* pileup_read_t;
/* CIGAR operations after the current one */
cigar_s bam_pileup_read_cigar_before(pileup_read_t);
/* CIGAR operations before the current one */
cigar_s bam_pileup_read_cigar_after(pileup_read_t);