ruby/sambamba-ffi.rb

  
  # (Not documented)
  # 
  # @method bam_read_set_is_first_of_pair(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_is_first_of_pair, :bam_read_set_is_first_of_pair, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_is_second_of_pair(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_is_second_of_pair, :bam_read_set_is_second_of_pair, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_is_secondary_alignment(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_is_secondary_alignment, :bam_read_set_is_secondary_alignment, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_failed_quality_control(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_failed_quality_control, :bam_read_set_failed_quality_control, [BamReadS, :int], :void
  
  # (Not documented)
  # 
  # @method bam_read_set_is_duplicate(bam_read_s, int)
  # @param [BamReadS] bam_read_s 
  # @param [Integer] int 
  # @return [nil] 
  # @scope class
  attach_function :bam_read_set_is_duplicate, :bam_read_set_is_duplicate, [BamReadS, :int], :void
  
  # -------- Accessing read tags --------
  # 
  # <em>This entry is only for documentation and no real method. The FFI::Enum can be accessed via #enum_type(:tag_type_id).</em>
  # 
  # === Options:
  # :uint8 ::
  #   
  # :uint16 ::
  #   
  # :uint32 ::
  #   
  # :int8 ::
  #   
  # :int16 ::
  #   
  # :int32 ::
  #   
  # :float ::
  #   
  # :char ::
  #   
  # :uint8_array ::
  #   
  # :uint16_array ::
  #   
  # :uint32_array ::
  #   
  # :int8_array ::
  #   
  # :int16_array ::
  #   
  # :int32_array ::
  #   
  # :float_array ::
  #   
  # :string ::
  #   
  # :hex_string ::
  #   
  # :null ::
  #   should be treated same as string
  # 
  # @method _enum_tag_type_id_
  # @return [Symbol]
  # @scope class
  enum :tag_type_id, [
    :uint8, 32,
    :uint16, 64,
    :uint32, 128,
    :int8, 48,
    :int16, 80,
    :int32, 144,
    :float, 136,
    :char, 36,
    :uint8_array, 33,
    :uint16_array, 65,
    :uint32_array, 129,
    :int8_array, 49,
    :int16_array, 81,
    :int32_array, 145,
    :float_array, 137,
    :string, 37,
    :hex_string, 45,
    :null, 2
  ]
  
  # In order to get the tag value, first get the type of the tag.
  #    Then call the corresponding function.
  #    (tag_name length must be 2 - check that in the target language)
  # 
  # @method bam_read_tag_type_id(bam_read_s, tag_name)
  # @param [BamReadS] bam_read_s 
  # @param [String] tag_name 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_tag_type_id, :bam_read_tag_type_id, [BamReadS, :string], :uchar
  
  # (Not documented)
  # 
  # @method bam_read_char_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_char_tag, :bam_read_char_tag, [BamReadS, :string], :char
  
  # (Not documented)
  # 
  # @method bam_read_int8_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_int8_tag, :bam_read_int8_tag, [BamReadS, :string], :char
  
  # (Not documented)
  # 
  # @method bam_read_uint8_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_uint8_tag, :bam_read_uint8_tag, [BamReadS, :string], :uchar
  
  # (Not documented)
  # 
  # @method bam_read_int16_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_int16_tag, :bam_read_int16_tag, [BamReadS, :string], :short
  
  # (Not documented)
  # 
  # @method bam_read_uint16_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_uint16_tag, :bam_read_uint16_tag, [BamReadS, :string], :ushort
  
  # (Not documented)
  # 
  # @method bam_read_int32_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_int32_tag, :bam_read_int32_tag, [BamReadS, :string], :int
  
  # (Not documented)
  # 
  # @method bam_read_uint32_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Integer] 
  # @scope class
  attach_function :bam_read_uint32_tag, :bam_read_uint32_tag, [BamReadS, :string], :uint
  
  # (Not documented)
  # 
  # @method bam_read_float_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Float] 
  # @scope class
  attach_function :bam_read_float_tag, :bam_read_float_tag, [BamReadS, :string], :float
  
  # (Not documented)
  # 
  # @method bam_read_int8_array_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Aint8S] 
  # @scope class
  attach_function :bam_read_int8_array_tag, :bam_read_int8_array_tag, [BamReadS, :string], Aint8S.by_value
  
  # (Not documented)
  # 
  # @method bam_read_uint8_array_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Auint8S] 
  # @scope class
  attach_function :bam_read_uint8_array_tag, :bam_read_uint8_array_tag, [BamReadS, :string], Auint8S.by_value
  
  # (Not documented)
  # 
  # @method bam_read_int16_array_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Aint16S] 
  # @scope class
  attach_function :bam_read_int16_array_tag, :bam_read_int16_array_tag, [BamReadS, :string], Aint16S.by_value
  
  # (Not documented)
  # 
  # @method bam_read_uint16_array_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Auint16S] 
  # @scope class
  attach_function :bam_read_uint16_array_tag, :bam_read_uint16_array_tag, [BamReadS, :string], Auint16S.by_value
  
  # (Not documented)
  # 
  # @method bam_read_int32_array_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Aint32S] 
  # @scope class
  attach_function :bam_read_int32_array_tag, :bam_read_int32_array_tag, [BamReadS, :string], Aint32S.by_value
  
  # (Not documented)
  # 
  # @method bam_read_uint32_array_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [Auint32S] 
  # @scope class
  attach_function :bam_read_uint32_array_tag, :bam_read_uint32_array_tag, [BamReadS, :string], Auint32S.by_value
  
  # (Not documented)
  # 
  # @method bam_read_float_array_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [AfloatS] 
  # @scope class
  attach_function :bam_read_float_array_tag, :bam_read_float_array_tag, [BamReadS, :string], AfloatS.by_value
  
  # (Not documented)
  # 
  # @method bam_read_string_tag(bam_read_s, string)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @return [DstringS] 
  # @scope class
  attach_function :bam_read_string_tag, :bam_read_string_tag, [BamReadS, :string], DstringS.by_value
  
  # The following functions return a structure with updated 'buf' and 'len'.
  #    If the pointer is different from the initial 'buf' field of the read,
  #    the data from the buffer must be copied into newly allocated memory. 
  #    Otherwise only the length must be updated.
  # 
  # @method df_bam_read_set_char_tag(bam_read_s, string, char_s)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @param [Integer] char_s 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_char_tag, :df_bam_read_set_char_tag, [BamReadS, :string, :char], BufferS
  
  # (Not documented)
  # 
  # @method df_bam_read_set_int8_tag(bam_read_s, string, s_char)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @param [Integer] s_char 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_int8_tag, :df_bam_read_set_int8_tag, [BamReadS, :string, :char], BufferS
  
  # (Not documented)
  # 
  # @method df_bam_read_set_uint8_tag(bam_read_s, string, u_char)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @param [Integer] u_char 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_uint8_tag, :df_bam_read_set_uint8_tag, [BamReadS, :string, :uchar], BufferS
  
  # (Not documented)
  # 
  # @method df_bam_read_set_int16_tag(bam_read_s, string, short)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @param [Integer] short 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_int16_tag, :df_bam_read_set_int16_tag, [BamReadS, :string, :short], BufferS
  
  # (Not documented)
  # 
  # @method df_bam_read_set_uint16_tag(bam_read_s, string, u_short)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @param [Integer] u_short 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_uint16_tag, :df_bam_read_set_uint16_tag, [BamReadS, :string, :ushort], BufferS
  
  # (Not documented)
  # 
  # @method df_bam_read_set_int32_tag(bam_read_s, string, int)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @param [Integer] int 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_int32_tag, :df_bam_read_set_int32_tag, [BamReadS, :string, :int], BufferS
  
  # (Not documented)
  # 
  # @method df_bam_read_set_uint32_tag(bam_read_s, string, u_int)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @param [Integer] u_int 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_uint32_tag, :df_bam_read_set_uint32_tag, [BamReadS, :string, :uint], BufferS
  
  # (Not documented)
  # 
  # @method df_bam_read_set_float_tag(bam_read_s, string, float)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @param [Float] float 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_float_tag, :df_bam_read_set_float_tag, [BamReadS, :string, :float], BufferS
  
  # (Not documented)
  # 
  # @method df_bam_read_set_string_tag(bam_read_s, string, strz)
  # @param [BamReadS] bam_read_s 
  # @param [String] string 
  # @param [String] strz 
  # @return [BufferS] 
  # @scope class
  attach_function :df_bam_read_set_string_tag, :df_bam_read_set_string_tag, [BamReadS, :string, :string], BufferS
  
  # notice that pileup_read_t can be passed as an argument
  #    to all functions that expect bam_read_t
  # 
  # = Fields:
  # :read ::
  #   (BamReadS) 
  # :additional_info ::
  #   (Array<Integer>) 
  class PileupReadS < FFI::Struct
    layout :read, BamReadS.by_value,
           :additional_info, [:int, 5]
  end
  
  # (Not documented)
  # 
  # = Fields:
  # :buf ::
  #   (PileupReadS) 
  # :len ::
  #   (Integer) 
  class ApileupReadS < FFI::Struct
    layout :buf, PileupReadS,
           :len, :ulong
  end
  
  # CIGAR operations after the current one
  # 
  # @method bam_pileup_read_cigar_before(pileup_read_s)
  # @param [PileupReadS] pileup_read_s 
  # @return [CigarS] 
  # @scope class
  attach_function :bam_pileup_read_cigar_before, :bam_pileup_read_cigar_before, [PileupReadS], CigarS.by_value
  
  # CIGAR operations before the current one
  # 
  # @method bam_pileup_read_cigar_after(pileup_read_s)
  # @param [PileupReadS] pileup_read_s 
  # @return [CigarS] 
  # @scope class
  attach_function :bam_pileup_read_cigar_after, :bam_pileup_read_cigar_after, [PileupReadS], CigarS.by_value
